--- a/TheTaleProject/TheTale/src/main/res/values/strings.xml
+++ b/TheTaleProject/TheTale/src/main/res/values/strings.xml
@@ -15,5 +15,11 @@
     <string name="title_activity_journal_list">Journal</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_section1">Diary</string>
+    <string name="title_section2">Journal</string>
+    <string name="title_section3">Hero details</string>
+    <string name="login_button_text">Login</string>
+    <string name="_login_label">Login</string>
+    <string name="_password_label">Password</string>
 
 </resources>
